# dspy-compounding-engineering

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  cli.py  config.py  demo_feature.py  docker-compose.yml  dummy_plan.md  mkdocs.yml  pr_body.md  pyproject.toml  pytest.ini  test_error.txt  tmp_rovodev_UI_IMPROVEMENTS.md  tmp_rovodev_test_friday_ui.py  uvx
.github/workflows/: branch-enforcement.yml  publish.yml  release-tagging.yml  test.yml
agents/: knowledge_gardener.py
agents/research/: __init__.py  best_practices_researcher.py  framework_docs_researcher.py  git_history_analyzer.py  repo_research_analyst.py  schema.py
agents/review/: __init__.py  agent_native_reviewer.py  architecture_strategist.py  code_simplicity_reviewer.py  data_integrity_guardian.py  dhh_rails_reviewer.py  julik_frontend_races_reviewer.py  kieran_python_reviewer.py  kieran_rails_reviewer.py  kieran_typescript_reviewer.py  pattern_recognition_specialist.py  performance_oracle.py  security_sentinel.py
agents/schema/: __init__.py  base.py  research.py  review.py  workflow.py
agents/workflow/: __init__.py  agent_generator.py  command_generator.py  every_style_editor.py  feedback_codifier.py  plan_generator.py  pr_comment_resolver.py  react_todo_resolver.py  spec_flow_analyzer.py  task_executor.py  task_extractor.py  task_validator.py  todo_resolver.py  triage_agent.py  work_agent.py  work_plan_executor.py  work_todo_executor.py
docs/: roadmap.md
friday/: __init__.py  agent.py  app.py  cli.py  context.py  theme.py  tools.py
installer/: README.md  pyproject.toml
installer/dspyce_install/: __init__.py  main.py
mcp_server/: __init__.py  config.py  context_manager.py
mcp_servers/: compounding_server.py  file_server.py  git_server.py  search_server.py
scripts/: install.sh
tests/: conftest.py  manual_verify_pii.py  manual_verify_security.py  test_agent_tools_integration.py  test_cli.py  test_data_integrity.py  test_documentation_fetcher.py  test_documentation_paging.py  test_file_tools.py  test_gardener_unit.py  test_git_service.py  test_hardening_verified.py  test_indexer_unit.py  test_integration_llm.py  test_io_safe.py  test_knowledge_base.py  test_logger.py  test_mcp.py  test_registry.py  test_scrubber_unit.py  test_search_limit.py  test_search_tool.py  test_sync.py  test_token_service.py  test_vector_mismatch.py
utils/: file_tools.py  git_service.py  knowledge_base.py  safe_io.py  todo_service.py
workflows/: codify.py  generate_agent.py  generate_command.py  plan.py  resolve_todo.py  review.py  sync.py  triage.py  work.py  work_unified.py
(+44 files in other folders)
