[project]
name = "dspyce-install"
version = "0.1.0"
description = "Installer for dspy-compounding-engineering CLI via uv"
authors = [{name = "Strategic Automation"}]
dependencies = [
    "uv>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dspyce-install = "dspyce_install.main:main"
